image files path changed

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
          <!--<i class="fa fa-mobile fa-5x custom-icon icon-color " aria-hidden="true"></i>-->
             <div class="imghover">
              <a  href="#">
-             <img src="F:/Web development/png/smartphone.png">
+             <img src="img/smartphone.png">
              </a>
              </div>
 
@@ -129,7 +129,7 @@
           -->
           <div  class="imghover">
           <a href="#">
-          <img src="F:/Web development/png/tablet-1.png">
+          <img src="img/tablet-1.png">
           </a>
           </div>
          <h4 class="text-center textstyle">Tablets</h4>
@@ -143,7 +143,7 @@
          <div class="col-sm-4 text-center  wow fadeInRight data-wow-duration="2s" data-wow-delay="0s" paddpara">
                     <div  class="imghover">
                      <a  class="imghover" href="#">
-                      <img src="F:/Web development/png/levels.png">
+                      <img src="img/levels.png">
                       </a>
                       </div>
          <!-- <i class="fa fa-laptop fa-5x custom-icon icon-color" aria-hidden="true"></i> -->
@@ -422,13 +422,10 @@ Contact No-9971712232</p>
 
 
 
-
+        <script src="js/vendor/jquery-1.12.0.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/wow.js"></script>
-                <script type="text/javascript" src="js/wow.min.js"></script>
-
-
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+        <script type="text/javascript" src="js/wow.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
