--- a/index.html
+++ b/index.html
@@ -24,15 +24,17 @@
 
         <!-- jQuery library -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+<!--          <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+ -->
 <!-- Latest compiled JavaScript -->
         <!-- Place favicon.ico in the root directory -->
 
         <link rel="stylesheet" href="css/normalize.css">
        <link rel="stylesheet" href="css/main7.css">
 
+
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <script src="js/vendor/bootstrap.min.js"></script>
     
         
     </head>
