--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-                 <a class="navbar-brand wow fadeIn  data-wow-duration="3s" data-wow-delay="2s" custom2" href="#section0">Technoholic</a>
+                 <a class="navbar-brand custom2 wow fadeIn  data-wow-duration="3s" data-wow-delay="2s"  href="#section0">Technoholic</a>
              </div>
              <ul class="nav collapse navbar-collapse navbar-nav navbar-right textstyle" id="bs-example-navbar-collapse-1">
               <li> <a href="#section0" Class="cstm">Home</a></li>
