--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
                  <a class="navbar-brand custom2 wow fadeIn  data-wow-duration="3s" data-wow-delay="2s"  href="#section0">Shubham Jain</a>
              </div>
              <ul class="nav collapse navbar-collapse navbar-nav navbar-right textstyle" id="bs-example-navbar-collapse-1">
-              <li> <a href="#section0" Class="cstm">Home</a></li>
-              <li><a href="#section1" class="cstm">Technology</a></li>
-              <li><a href="#section2" class="cstm">Devices</a></li>
+              <li> <a href="#section0" Class="cstm">Introduction</a></li>
+              <li><a href="#section1" class="cstm">Academics</a></li>
+              <li><a href="#section2" class="cstm">Internships and Work Experience</a></li>
 
-              <li><a href="#canvas" class="cstm">Place</a></li>
-              <li><a href="#section4" Class="cstm">Contact Us</a></li>
+              <li><a href="#canvas" class="cstm">Projects</a></li>
+              <li><a href="#section4" Class="cstm">Contact Me</a></li>
               </ul>
             </div>
             </nav>
@@ -97,7 +97,7 @@
     <section id="section0">
         <section class="module parallax parallax-3">
             <div class="container">
-                <p id="text2" class="text-center wow fadeInDown data-wow-duration="3s" data-wow-delay="2s"" style="font-family: 'Fugaz One', cursive;">Because We all love being technoholic!</p>
+                <p id="text2" class="text-center wow fadeInDown data-wow-duration="3s" data-wow-delay="2s"" style="font-family: 'Fugaz One', cursive;">Welcome to the Website of Shubham Jain</p>
             </div>
         </section>
 
@@ -169,32 +169,27 @@
             </div>
         <div class="col-sm-6 tab-cnt">
         <ul class="nav nav-tabs">
-  <li class="active"><a data-toggle="tab" href="#Mobiles">Mobiles</a></li>
-  <li><a data-toggle="tab" href="#Tablets">Tablets</a></li>
-  <li><a data-toggle="tab" href="#Desktops">Desktops</a></li>
+  <li class="active"><a data-toggle="tab" href="#Mobiles">School</a></li>
+  <li><a data-toggle="tab" href="#Tablets">Graduation</a></li>
+  <li><a data-toggle="tab" href="#Desktops">Post Graduation</a></li>
 </ul>
 
 <div class="tab-content wow fadeInDown">
   <div id="Mobiles" class="tab-pane fade in active">
-    <h3 class="textstyle">Mobiles</h3>
-    <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat.    </p>
+    <h3 class="textstyle">School</h3>
+    <p class="text-justify">Completed Schooling from Lovely Public School, New Layal Pur, Delhi
+      affiliated to CBSE, Delhi, scoring 83.40% in class 12th and 86% in class 10th</p>
   </div>
   <div id="Tablets" class="tab-pane fade">
-    <h3 class="textstyle">Tablets</h3>
-    <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat.    </p>
+    <h3 class="textstyle">Graduation</h3>
+    <p class="text-justify">Completed B.Tech in Electronics and Communication Engineering 
+      from Amedkar Institute of Technology affiliated to Guru Gobind Singh Indrprastha
+       Delhi, scoring 75.10%  </p>
   </div>
   <div id="Desktops" class="tab-pane fade">
-    <h3 class="textstyle">Desktops</h3>
-    <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat.    </p>
+    <h3 class="textstyle">Post Graduation</h3>
+    <p class="text-justify">Currently Pursuing MBA from Centre of Management Studies,
+      Jamia Millia Islamia, University, Delhi</p>
   </div>
 </div>
         </div>
