--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
              </a>
              </div>
 
-         <h4 class="text-center textstyle">High School/h4>
+         <h4 class="text-center textstyle">High School<//h4>
          
          <p class="p-text  text-hover1 text-justify">Completed Schooling from Lovely Public School, New Layal Pur, Delhi
           affiliated to CBSE, Delhi, scoring 83.40% in class 12th and 86% in class 10th </p>
