--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                  <a class="navbar-brand custom2 wow fadeIn  data-wow-duration="3s" data-wow-delay="2s"  href="#section0">Shubham Jain</a>
              </div>
              <ul class="nav collapse navbar-collapse navbar-nav navbar-right textstyle" id="bs-example-navbar-collapse-1">
-              <li> <a href="#section0" Class="cstm">Introduction</a></li>
-              <li><a href="#section1" class="cstm">Academics</a></li>
-              <li><a href="#section2" class="cstm">Internships and Work Experience</a></li>
+              <li> <a href="#section0" Class="cstm">Academics</a></li>
+              <li><a href="#section1" class="cstm">Work Experience</a></li>
+              <li><a href="#section2" class="cstm">Projects</a></li>
 
-              <li><a href="#canvas" class="cstm">Projects</a></li>
+              <li><a href="#canvas" class="cstm">Achievements</a></li>
               <li><a href="#section4" Class="cstm">Contact Me</a></li>
               </ul>
             </div>
@@ -97,7 +97,7 @@
     <section id="section0">
         <section class="module parallax parallax-3">
             <div class="container">
-                <p id="text0" class="text-center wow fadeInDown data-wow-duration="3s" data-wow-delay="2s"" style="font-family: 'Fugaz One', cursive;">Welcome to the Website of Shubham Jain</p>
+                <p id="text2" class="text-center wow fadeInDown data-wow-duration="4s" data-wow-delay="3s"" style="font-family: 'Fugaz One', cursive;">Welcome to the Website of Shubham Jain</p>
             </div>
         </section>
 
@@ -113,12 +113,12 @@
 
          <!--<i class="fa fa-mobile fa-5x custom-icon icon-color " aria-hidden="true"></i>-->
             <div class="imghover1">
-             <a  href="#">
+             <a  href="">
              <img src="img/smartphone.png">
              </a>
              </div>
 
-         <h4 class="text-center textstyle">High School<//h4>
+         <h4 class="text-center textstyle">High School</h4>
          
          <p class="p-text  text-hover1 text-justify">Completed Schooling from Lovely Public School, New Layal Pur, Delhi
           affiliated to CBSE, Delhi, scoring 83.40% in class 12th and 86% in class 10th </p>
@@ -129,7 +129,7 @@
         <!--  <i class="fa fa-tablet fa-5x custom-icon icon-color" aria-hidden="true"></i>
           -->
           <div  class="imghover2">
-          <a href="#">
+          <a href="">
           <img src="img/tablet-1.png">
           </a>
           </div>
@@ -142,7 +142,7 @@
          
          <div class="col-sm-4 text-center  wow fadeInRight data-wow-duration="2s" data-wow-delay="0s" paddpara">
                     <div  class="imghover3">
-                     <a  class="imghover" href="#">
+                     <a  class="imghover" href="">
                       <img src="img/levels.png">
                       </a>
                       </div>
