--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
         <div class="visible-sm visible-xs">
             <div id="mySidenav" class="sidenav">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                <a class="cstm" href="#section0" onclick="closeNav()">Home</a>
-                <a  class="cstm" href="#section1" onclick="closeNav()">Technology</a>
-                <a class="cstm" href="#section2" onclick="closeNav()">Devices</a>
-                <a class="cstm"  href="#canvas" onclick="closeNav()">Place</a>
-                <a class="cstm" href="#section4" onclick="closeNav()">Contact Us</a>
+                <a class="cstm" href="#section0" onclick="closeNav()">Academics</a>
+                <a  class="cstm" href="#section1" onclick="closeNav()">Work Experience</a>
+                <a class="cstm" href="#section2" onclick="closeNav()">Projects</a>
+                <a class="cstm"  href="#canvas" onclick="closeNav()">Achievements</a>
+                <a class="cstm" href="#section4" onclick="closeNav()">Contact Me</a>
             </div>
         <div  class="buttoneffect" style="font-size:30px;cursor:pointer; margin-left:10px; color:dimgrey;" onclick="openNav()">&#9776; <h2 style="float:right; color:#36d7b7;font-family: 'Fjalla One', sans-serif; margin-top:5px; margin-right:10px">Technoholic</h2></div>
 
@@ -113,9 +113,9 @@
 
          <!--<i class="fa fa-mobile fa-5x custom-icon icon-color " aria-hidden="true"></i>-->
             <div class="imghover1">
-             <a  href="">
+            
              <img src="img/smartphone.png">
-             </a>
+            
              </div>
 
          <h4 class="text-center textstyle">High School</h4>
