--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     </div>
     <section id="section1">
         <div class="container row custom4">
-           <div> <h2 class="text-center textsyle secstyle">Technology</h2>
+           <div> <h2 class="text-center textsyle secstyle">Work Experience<</h2>
             </div>
         <div class="col-sm-6 tab-cnt">
         <ul class="nav nav-tabs">
@@ -248,7 +248,7 @@
 
 <section id="section2" class="carousel-container2">
     <div class="heading">
-    <h2 class="text-center secstyle2 textstyle" >Devices</h2>
+    <h2 class="text-center secstyle2 textstyle" >Projects</h2>
     </div>
 
 
@@ -356,12 +356,12 @@
 <section >
 <div class="row contactcntrl">
 <div class="col-md-5 col-xs-12 contactcntrl2 wow slideInLeft">
-<h2 class="textstyle">Contact Us:</h2>
-<h3 class="textstyle">Technoholic</h3>
-<p>Krishna Nagar, New Delhi<br>
-PIN:110051<br>
+<h2 class="textstyle">Contact Me:</h2>
+<h3 class="textstyle">Centre of Management Studies</h3>
+<p>Jamia Millia Islamia Univeristy, New Delhi<br>
 India<br>
-Contact No-9971712232</p>
+Contact No-9871904016<br
+Email:shubhamjain0294@gmail.com</p>
 </div>
 <div class="col-md-2 col-xs-12">
 </div>
