--- a/index.html
+++ b/index.html
@@ -351,16 +351,15 @@
 
 </section>
 <section id="canvas">
-<iframe class="mapstyle" id="map_canvas" src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d14004.366224739158!2d77.2692501!3d28.65697715!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1471413206769" width="100%" height="500" frameborder="0" style="border:0 width=100% " allowfullscreen></iframe>
+<!--iframe class="mapstyle" id="map_canvas" src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d14004.366224739158!2d77.2692501!3d28.65697715!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1471413206769" width="100%" height="500" frameborder="0" style="border:0 width=100% " allowfullscreen></iframe>
 </section>
 <section >
 <div class="row contactcntrl">
 <div class="col-md-5 col-xs-12 contactcntrl2 wow slideInLeft">
 <h2 class="textstyle">Contact Me:</h2>
 <h3 class="textstyle">Centre of Management Studies</h3>
-<p>Jamia Millia Islamia Univeristy, New Delhi<br>
-India<br>
-Contact No-9871904016<br
+<p>Jamia Millia Islamia, New Delhi, India<br>
+Mobile:9871904016<br>
 Email:shubhamjain0294@gmail.com</p>
 </div>
 <div class="col-md-2 col-xs-12">
@@ -399,7 +398,7 @@ Email:shubhamjain0294@gmail.com</p>
 <div class="footer-container" id="section4">
 <footer class="footer navbar-fixed">
     <div class="container-fluid">
-    <p class="text-muted text-center wow fadeInUp">Site designed by <b>Shubham Jain</b></p>
+    <p class="text-muted text-center wow fadeInUp">Site Designed and Developed by <b>Shubham Jain</b></p>
     </div>
 </footer>
 </div>
