--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 
 </section>
 <section id="canvas">
-<!--iframe class="mapstyle" id="map_canvas" src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d14004.366224739158!2d77.2692501!3d28.65697715!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1471413206769" width="100%" height="500" frameborder="0" style="border:0 width=100% " allowfullscreen></iframe>
+<iframe class="mapstyle" id="map_canvas" src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d14004.366224739158!2d77.2692501!3d28.65697715!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1471413206769" width="100%" height="500" frameborder="0" style="border:0 width=100% " allowfullscreen></iframe>
 </section>
 <section >
 <div class="row contactcntrl">
