--- a/index.html
+++ b/index.html
@@ -160,13 +160,13 @@
     </div>
     <section id="section1">
         <div class="container row custom4">
-           <div> <h2 class="text-center textsyle secstyle">Work Experience<</h2>
+           <div> <h2 class="text-center textsyle secstyle">Work Experience</h2>
             </div>
         <div class="col-sm-6 tab-cnt">
         <ul class="nav nav-tabs">
-  <li class="active"><a data-toggle="tab" href="#Mobiles">School</a></li>
-  <li><a data-toggle="tab" href="#Tablets">Graduation</a></li>
-  <li><a data-toggle="tab" href="#Desktops">Post Graduation</a></li>
+  <li class="active"><a data-toggle="tab" href="#Mobiles">Tata Consultancy Services</a></li>
+  <li><a data-toggle="tab" href="#Tablets">Shop Bonanza</a></li>
+  <li><a data-toggle="tab" href="#Desktops">Zolo Technologies</a></li>
 </ul>
 
 <div class="tab-content wow fadeInDown">
