--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <section id="section0">
         <section class="module parallax parallax-3">
             <div class="container">
-                <p id="text2" class="text-center wow fadeInDown data-wow-duration="4s" data-wow-delay="3s"" style="font-family: 'Fugaz One', cursive;">Welcome to the Website of Shubham Jain</p>
+                <p id="text2" class="text-center wow  data-wow-duration="4s" data-wow-delay="3s"" style="font-family: 'Fugaz One', cursive;">Welcome to the Website of Shubham Jain</p>
             </div>
         </section>
 
@@ -164,22 +164,22 @@
             </div>
         <div class="col-sm-6 tab-cnt">
         <ul class="nav nav-tabs">
-  <li class="active"><a data-toggle="tab" href="#Mobiles">Tata Consultancy Services</a></li>
-  <li><a data-toggle="tab" href="#Tablets">Shop Bonanza</a></li>
-  <li><a data-toggle="tab" href="#Desktops">Zolo Technologies</a></li>
+  <li class="active"><a data-toggle="tab" href="#Mobiles">Corporate</a></li>
+  <li><a data-toggle="tab" href="#Tablets">Internship</a></li>
+  <li><a data-toggle="tab" href="#Desktops">Trainings</a></li>
 </ul>
 
 <div class="tab-content wow fadeInDown">
   <div id="Mobiles" class="tab-pane fade in active">
-    <h3 class="textstyle">School</h3>
+    <h3 class="textstyle">Tata Consultancy Services</h3>
     <p class="text-justify">aaaa</p>
   </div>
   <div id="Tablets" class="tab-pane fade">
-    <h3 class="textstyle">Graduation</h3>
+    <h3 class="textstyle">Shop Bonanza</h3>
     <p class="text-justify">bbbbbb </p>
   </div>
   <div id="Desktops" class="tab-pane fade">
-    <h3 class="textstyle">Post Graduation</h3>
+    <h3 class="textstyle">Zolo Technologies</h3>
     <p class="text-justify">cccccc</p>
   </div>
 </div>
@@ -191,7 +191,7 @@
     <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" data-target="#collapse1">
         <h4 class="panel-title">
         <a class="accordion-toggle textstyle">
-        Mobiles</a>
+        Airport Authority of India</a>
       </h4>
     </div>
     <div id="collapse1" class="panel-collapse collapse in">
@@ -205,7 +205,7 @@
       <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" data-target="#collapse2">
           <h4 class="panel-title">
               <a class="accordion-toggle textstyle">
-                  Tablets</a>
+                  NTPC</a>
           </h4>
       </div>
     <div id="collapse2" class="panel-collapse collapse">
@@ -219,7 +219,7 @@
       <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" data-target="#collapse3">
           <h4 class="panel-title">
               <a class="accordion-toggle textstyle">
-                  Desktops</a>
+                  Scaledesk Webstudio</a>
           </h4>
       </div>
     <div id="collapse3" class="panel-collapse collapse">
