--- a/index.html
+++ b/index.html
@@ -172,7 +172,13 @@
 <div class="tab-content wow fadeInDown">
   <div id="Mobiles" class="tab-pane fade in active">
     <h3 class="textstyle">Tata Consultancy Services</h3>
-    <p class="text-justify">aaaa</p>
+    <p class="text-justify">Individually delivered a project for the client to validate the functionality of the application<br>
+•	Reduced the overall Test cycle execution time by ~80% by Automating the Manual test scripts<br>
+•	Led a team to set up test environment, execute requirement analysis and design the system test cases<br>
+•	Collaborated with development team to analyze business requirements and to frame the test cases
+•	Automated API testing using Micro Focus Unified Functional Testing thus saving ~60% manual effort
+•	Prepared System Test Plan, Test Cycle Index documents, executed Test Scripts, reported Defects and prepared Test Cycle Summary and Test Results reports after execution
+</p>
   </div>
   <div id="Tablets" class="tab-pane fade">
     <h3 class="textstyle">Shop Bonanza</h3>
