--- a/index.html
+++ b/index.html
@@ -171,22 +171,31 @@
 
 <div class="tab-content wow fadeInDown">
   <div id="Mobiles" class="tab-pane fade in active">
-    <h3 class="textstyle">Tata Consultancy Services</h3>
-    <p class="text-justify">Individually delivered a project for the client to validate the functionality of the application<br>
-•	Reduced the overall Test cycle execution time by ~80% by Automating the Manual test scripts<br>
-•	Led a team to set up test environment, execute requirement analysis and design the system test cases<br>
+    <h3 class="textstyle">Tata Consultancy Services (System Engineer)</h3>
+    <p class="text-justify">•	Individually delivered a project for the client to validate the functionality of the application 
+•	Reduced the overall Test cycle execution time by ~80% by Automating the Manual test scripts
+•	Led a team to set up test environment, execute requirement analysis and design the system test cases 
 •	Collaborated with development team to analyze business requirements and to frame the test cases
 •	Automated API testing using Micro Focus Unified Functional Testing thus saving ~60% manual effort
 •	Prepared System Test Plan, Test Cycle Index documents, executed Test Scripts, reported Defects and prepared Test Cycle Summary and Test Results reports after execution
 </p>
   </div>
   <div id="Tablets" class="tab-pane fade">
-    <h3 class="textstyle">Shop Bonanza</h3>
-    <p class="text-justify">bbbbbb </p>
+    <h3 class="textstyle">Shop Bonanza (HR Manager)</h3>
+    <p class="text-justify">•	Handled overall end to end Hiring process from sourcing to onboarding with complete ownership and understood HR requirements of the organization by doing skill gap analysis
+•	Performed Employee Engagement activities by Action Plans & Pulse Surveys to drive DEI initiatives
+•	Updated the internal databases with new employee information and maintained records of employee-related data and connected with employees to understand their skills and career aspirations
+•	Participated in employer branding initiatives and other ad hoc projects and responsibilities as assigned
+•	Managed a team of 4 co-workers to ensure employer’s compliance processes and protocols
+ </p>
   </div>
   <div id="Desktops" class="tab-pane fade">
-    <h3 class="textstyle">Zolo Technologies</h3>
-    <p class="text-justify">cccccc</p>
+    <h3 class="textstyle">Zolo Technologies (Management Trainee)</h3>
+    <p class="text-justify">•	Curated the highest quality content for employer’s website and for marketing activities
+•	Coordinated with cross functional teams to ensure smooth functioning of the process 
+•	Ideated & executed Digital campaigns for enhanced brand visibility leading to increase in ~10% revenue
+•	Worked directly with founders to gain knowledge of operations and suggesting process improvements
+</p>
   </div>
 </div>
         </div>
@@ -276,11 +285,10 @@
       </div>
       <div class="col-md-8">
       
-      <h3 class="textstyle">Tablets</h3>
-      <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat.
+      <h3 class="textstyle">Corporate Project</h3>
+      <p class="text-justify">Collaborated with management to assess T&D needs, identified prospective vendors, designed a training calendar and scheduled sessions to help employees develop required competencies
+•	Analyzed & suggested improvements in the performance management system of Shop Bonanza 
+
       </p>
       </div>
       </div>
@@ -293,11 +301,8 @@
       <img class="img-circle center-block"  src="photo3.jfif" width="100" height="100" alt="Phones">
       </div>
       <div class="col-md-8">
-      <h3 class="textstyle">Phones</h3>
-      <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat.
+      <h3 class="textstyle">Internship Project</h3>
+      <p class="text-justify">•	Benchmarked compensation practices to design pay grades & proposed a pay structure for a hotel
       </p>
       </div>
       </div>
@@ -311,11 +316,8 @@
       <img class=" img-circle center-block"  src="photo4.jfif" width="100" height="100" alt="Laptop">
       </div>
       <div class="col-md-8">
-      <h3 class="textstyle">Laptop</h3>
-      <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat.
+      <h3 class="textstyle">B.Tech-Project</h3>
+      <p class="text-justify">•	Successfully implemented project- Performance Analysis of LTE & LTE Advance Systems using system level simulation. 
       </p>
       </div>
       </div>
