--- a/index.html
+++ b/index.html
@@ -172,12 +172,9 @@
 <div class="tab-content wow fadeInDown">
   <div id="Mobiles" class="tab-pane fade in active">
     <h3 class="textstyle">Tata Consultancy Services (System Engineer)</h3>
-    <p class="text-justify">•	Individually delivered a project for the client to validate the functionality of the application 
-•	Reduced the overall Test cycle execution time by ~80% by Automating the Manual test scripts
-•	Led a team to set up test environment, execute requirement analysis and design the system test cases 
-•	Collaborated with development team to analyze business requirements and to frame the test cases
-•	Automated API testing using Micro Focus Unified Functional Testing thus saving ~60% manual effort
-•	Prepared System Test Plan, Test Cycle Index documents, executed Test Scripts, reported Defects and prepared Test Cycle Summary and Test Results reports after execution
+    <p class="text-justify">Over 4 years of experience in software testing of Client/Server and web based applications using structured methodologies. 
+                           Very good experience in writing System Test Cases,
+                           Test Plans, executing Test Scripts, reporting defects and preparing Test Result reports.
 </p>
   </div>
   <div id="Tablets" class="tab-pane fade">
@@ -206,21 +203,23 @@
     <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" data-target="#collapse1">
         <h4 class="panel-title">
         <a class="accordion-toggle textstyle">
-        Airport Authority of India</a>
+        Skills</a>
       </h4>
     </div>
     <div id="collapse1" class="panel-collapse collapse in">
-      <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat.</div>
+      <div class="panel-body">•	HP UFT (Adv. QTP), HP ALM, SOAP UI
+•	VB-script, Unix, Putty, C++, SQL Query, GitHub
+•	HTML, CSS, JavaScript, Bootstrap Ajax, JQuery
+•	MS Word, MS Excel, MS PowerPoint, MS Outlook
+•	Test script development, execution.
+</div>
     </div>
   </div>
   <div class="panel panel-default">
       <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" data-target="#collapse2">
           <h4 class="panel-title">
               <a class="accordion-toggle textstyle">
-                  NTPC</a>
+                  Certifications</a>
           </h4>
       </div>
     <div id="collapse2" class="panel-collapse collapse">
@@ -234,14 +233,16 @@
       <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" data-target="#collapse3">
           <h4 class="panel-title">
               <a class="accordion-toggle textstyle">
-                  Scaledesk Webstudio</a>
+                  Extra Curriular Activities</a>
           </h4>
       </div>
     <div id="collapse3" class="panel-collapse collapse">
-      <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat.</div>
+      <div class="panel-body">•	Volunteer- Teach India, CSR Initiative by TIMES OF INDIA and BRITISH COUNCIL   
+•	Taught spoken English to under privileged youth.                                        
+•	Robotics- Coordinator of event”SNIFFER LFR” in Proscenium (College Technical Fest).          
+•	Attended workshops on Cloud Computing and Python Coding and Scripting.                 
+•	Member of Public relations team in Conversance-2014 (College cultural Fest).           
+</div>
     </div>
   </div>
 </div>
@@ -330,11 +331,8 @@
       <img class=" img-circle center-block" src="photo5.jfif" width="100" height="100" alt="Desktop">
       </div>
       <div class="col-md-8">
-      <h3 class="textstyle">Desktops</h3>
-      <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat.   </p>
+      <h3 class="textstyle">Samudra - AIT AUV</h3>
+      <p class="text-justify">•	Designed Mechanical models of Internal frame, Outer frame, Hull and various other parts using CATIA Software.   </p>
       </div>
       </div>
       
