--- a/index.html
+++ b/index.html
@@ -219,14 +219,14 @@
       <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" data-target="#collapse2">
           <h4 class="panel-title">
               <a class="accordion-toggle textstyle">
-                  Certifications</a>
+                  Participations</a>
           </h4>
       </div>
     <div id="collapse2" class="panel-collapse collapse">
-      <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-      sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat.</div>
+      <div class="panel-body">•	Adjudged as Best Table Topic Speaker during the event in TCS-Toast Master Club                                2019
+•	Amongst the top teams in final stage of 4th National Students Autonomous Underwater Vehicle Competition held at National Institute of Ocean Technology(NIOT, Chennai) 
+•	Member of team, winning first prize for best working model in Gridtech an international conference and exhibition organized by Power Grid Corporation of India                                                                   
+</div>
     </div>
   </div>
   <div class="panel panel-default">
