--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@ Email:shubhamjain0294@gmail.com</p>
 <footer class="footer navbar-fixed">
     <div class="container-fluid">
     <p class="text-muted text-center wow fadeInUp">Site Designed and Developed by <b>Shubham Jain</b></p>
+    <p class="text-muted text-center wow fadeInUp">Centre of Management Studies <b>Jamia Millia Islamia, Delhi | Batch of 2022</b></p>
     </div>
 </footer>
 </div>
