--- a/index.html
+++ b/index.html
@@ -371,9 +371,8 @@
                          
   </section>
 <section id="canvas">
-    <div class="heading">
-    <h2 class="text-center secstyle2 textstyle" >Projects</h2>
-    </div>                
+             <div> <h2 class="text-center textsyle secstyle">Achievements</h2>
+            </div>              
    <div class="row custom3">
 
          </div>
