--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                                  
            <div> <h2 class="text-center textsyle secstyle">Education</h2>
             </div>             
+          <div style="height:100px"></div>
          <div class="col-sm-4  text-center wow  fadeInRight data-wow-duration="3s" data-wow-delay="1s" paddpara ">
          
 
