--- a/index.html
+++ b/index.html
@@ -482,8 +482,8 @@ Email:shubhamjain0294@gmail.com</p>
 <div class="footer-container" id="section4">
 <footer class="footer navbar-fixed">
     <div class="container-fluid">
-    <p class="text-muted text-center wow fadeInUp">Site Designed and Developed by <b>Shubham Jain</b><br>
-                                                  Centre of Management Studies <b>Jamia Millia Islamia, Delhi | Batch of 2022</b></p>
+    <p class="text-muted text-center wow fadeInUp">Site Designed and Developed by <b>Shubham Jain &#8482;</b><br>
+                                                 <b>Centre of Management Studies | Jamia Millia Islamia, Delhi | Batch of 2022</b></p>
    
     </div>
 </footer>
