--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-                 <a class="navbar-brand custom2 wow fadeIn  data-wow-duration="3s" data-wow-delay="3s"  href="#section0">Shubham Jain</a>
+                 <a class="navbar-brand custom2 wow fadeIn  data-wow-duration="3s" data-wow-delay="3s"  href="#section0">Shubham Jain &#174;</a>
              </div>
              <ul class="nav collapse navbar-collapse navbar-nav navbar-right textstyle" id="bs-example-navbar-collapse-1">
               <li> <a href="#section0" Class="cstm">Academics</a></li>
@@ -464,7 +464,7 @@ Email:shubhamjain0294@gmail.com</p>
  
   <div class="form-group">
     <div class="col-sm-12">
-    <input type="number" maxlength="10" minlength="10" class="form-control form-cntrl2" id="contact" placeholder="Please enter your mobile no." required="Contact is also required">
+    <input type="number" maxlength="10" minlength="10" class="form-control form-cntrl2" id="Contact" placeholder="Please enter your Mobile no." required="Contact No. is also required">
   </div>
   </div>
   <div class="checkbox">
