--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-                 <a class="navbar-brand custom2 wow fadeIn  data-wow-duration="3s" data-wow-delay="3s"  href="#section0">Shubham Jain &#174;</a>
+                 <a class="navbar-brand custom2 wow fadeIn  data-wow-duration="3s" data-wow-delay="3s"  href="#section0">Shubham Jain &#8482;</a>
              </div>
              <ul class="nav collapse navbar-collapse navbar-nav navbar-right textstyle" id="bs-example-navbar-collapse-1">
               <li> <a href="#section0" Class="cstm">Academics</a></li>
@@ -78,7 +78,7 @@
                 <a class="cstm"  href="#canvas" onclick="closeNav()">Achievements</a>
                 <a class="cstm" href="#section4" onclick="closeNav()">Contact Me</a>
             </div>
-        <div  class="buttoneffect" style="font-size:30px;cursor:pointer; margin-left:10px; color:dimgrey;" onclick="openNav()">&#9776; <h2 style="float:right; color:#36d7b7;font-family: 'Fjalla One', sans-serif; margin-top:5px; margin-right:10px">Shubham Jain</h2></div>
+        <div  class="buttoneffect" style="font-size:30px;cursor:pointer; margin-left:10px; color:dimgrey;" onclick="openNav()">&#9776; <h2 style="float:right; color:#36d7b7;font-family: 'Fjalla One', sans-serif; margin-top:5px; margin-right:10px">Shubham Jain &#8482;</h2></div>
 
         <script>
             var open = false;
