--- a/index.html
+++ b/index.html
@@ -165,14 +165,14 @@
             </div>
         <div class="col-sm-6 tab-cnt">
         <ul class="nav nav-tabs">
-  <li class="active"><a data-toggle="tab" href="#Mobiles">Corporate</a></li>
-  <li><a data-toggle="tab" href="#Tablets">Internship</a></li>
-  <li><a data-toggle="tab" href="#Desktops">Trainings</a></li>
+  <li class="active"><a data-toggle="tab" href="#Mobiles"><b>Corporate</b></a></li>
+  <li><a data-toggle="tab" href="#Tablets"><b>Internship</b></a></li>
+  <li><a data-toggle="tab" href="#Desktops"><b>Trainings</b></a></li>
 </ul>
 
 <div class="tab-content wow fadeInDown">
   <div id="Mobiles" class="tab-pane fade in active">
-    <h3 class="textstyle">Tata Consultancy Services (System Engineer)</h3>
+    <h3 class="textstyle"><b>Tata Consultancy Services (System Engineer)</b></h3>
     <p class="text-justify">•	Over 4 years of experience in software testing of Client/Server and web based applications using structured methodologies. 
                            Very good experience in writing System Test Cases,
                            Test Plans, executing Test Scripts, reporting defects and preparing Test Result reports.<br>
@@ -180,7 +180,7 @@
 </p>
   </div>
   <div id="Tablets" class="tab-pane fade">
-    <h3 class="textstyle">Shop Bonanza (HR Manager)</h3>
+    <h3 class="textstyle"><b>Shop Bonanza (HR Manager)</b></h3>
     <p class="text-justify">•	Handled overall end to end Hiring process from sourcing to onboarding with complete ownership and understood HR requirements of the organization by doing skill gap analysis<br>
 •	Performed Employee Engagement activities by Action Plans & Pulse Surveys to drive DEI initiatives<br>
 •	Updated the internal databases with new employee information and maintained records of employee-related data and connected with employees to understand their skills and career aspirations<br>
@@ -189,7 +189,7 @@
  </p>
   </div>
   <div id="Desktops" class="tab-pane fade">
-    <h3 class="textstyle">Zolo Technologies (Management Trainee)</h3>
+    <h3 class="textstyle"><b>Zolo Technologies (Management Trainee)</b></h3>
     <p class="text-justify">•	Curated the highest quality content for employer’s website and for marketing activities<br>
 •	Coordinated with cross functional teams to ensure smooth functioning of the process<br> 
 •	Ideated & executed Digital campaigns for enhanced brand visibility leading to increase in ~10% revenue<br>
@@ -205,7 +205,7 @@
     <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" data-target="#collapse1">
         <h4 class="panel-title">
         <a class="accordion-toggle textstyle">
-        Skills</a>
+        <b>Skills</b></a>
       </h4>
     </div>
     <div id="collapse1" class="panel-collapse collapse in">
@@ -224,7 +224,7 @@
       <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" data-target="#collapse2">
           <h4 class="panel-title">
               <a class="accordion-toggle textstyle">
-                  Participations</a>
+                  <b>Participations</b></a>
           </h4>
       </div>
     <div id="collapse2" class="panel-collapse collapse">
@@ -238,7 +238,7 @@
       <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" data-target="#collapse3">
           <h4 class="panel-title">
               <a class="accordion-toggle textstyle">
-                  Extra Curriular Activities</a>
+                  <b>Extra Curriular Activities</b></a>
           </h4>
       </div>
     <div id="collapse3" class="panel-collapse collapse">
@@ -287,7 +287,7 @@
     <div class="item active">
     <div class="row">
       <div class="col-md-4">
-      <img class=" img-circle center-block" src="photo2.jfif"  width="100" height="100" alt="Tablets">
+      <img class=" img-circle center-block" src="1930425.png"  width="100" height="100" alt="Tablets">
       </div>
       <div class="col-md-8">
       
@@ -304,7 +304,7 @@
     <div class="item">
      <div class="row">
       <div class="col-md-4">
-      <img class="img-circle center-block"  src="photo3.jfif" width="100" height="100" alt="Phones">
+      <img class="img-circle center-block"  src="330841.png" width="100" height="100" alt="Phones">
       </div>
       <div class="col-md-8">
       <h3 class="textstyle"><b>Internship Project</b></h3>
@@ -319,7 +319,7 @@
     <div class="item">
     <div class="row">
      <div class="col-md-4">
-      <img class=" img-circle center-block"  src="photo4.jfif" width="100" height="100" alt="Laptop">
+      <img class=" img-circle center-block"  src="1811008.png" width="100" height="100" alt="Laptop">
       </div>
       <div class="col-md-8">
       <h3 class="textstyle"><b>B.Tech-Project</b></h3>
@@ -333,7 +333,7 @@
     <div class="item">
      <div class="row">
      <div class="col-md-4">
-      <img class=" img-circle center-block" src="photo5.jfif" width="100" height="100" alt="Desktop">
+      <img class=" img-circle center-block" src="1087815.png" width="100" height="100" alt="Desktop">
       </div>
       <div class="col-md-8">
       <h3 class="textstyle"><b>Samudra - AIT AUV</b></h3>
@@ -440,7 +440,7 @@
 
 <div class="row contactcntrl">
 <div class="col-md-5 col-xs-12 contactcntrl2 wow slideInLeft">
-<h2 class="textstyle">Contact Details:</h2>
+<h2 class="textstyle"><b>Contact Details:<b></h2>
 <h3 class="textstyle">Centre of Management Studies</h3>
 <p>Jamia Millia Islamia, New Delhi, India<br>
 Mobile:9871904016<br>
@@ -450,7 +450,7 @@ Email:shubhamjain0294@gmail.com</p>
 </div>
 <div class="col-md-5 formcntrl wow slideInRight text-center col-xs-12">
 <form  class="form-horizontal" role="form">
-   <h2 class="text-center textstyle">For Any Queries:</h2>
+   <h2 class="text-center textstyle"><b>For Any Queries:<b></h2>
    <div class="form-group">
     <div class="col-sm-12">
     <input type="name"  id="foo" class="form-control form-cntrl2" id="name" placeholder="Name" required="">
