--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
     <div class="item active">
     <div class="row">
       <div class="col-md-4">
-      <img class=" img-circle center-block" src="1930425.png"  width="100" height="100" alt="Tablets">
+      <img class=" " src="1930425.png"  width="150" height="150">
       </div>
       <div class="col-md-8">
       
