--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
     <div class="item">
      <div class="row">
       <div class="col-md-4">
-      <img class="img-circle center-block"  src="img/330841.png" width="100" height="100" alt="Phones">
+      <img  src="img/330841.png" alt="Phones">
       </div>
       <div class="col-md-8">
       <h3 class="textstyle"><b>Internship Project</b></h3>
@@ -319,7 +319,7 @@
     <div class="item">
     <div class="row">
      <div class="col-md-4">
-      <img class=" img-circle center-block"  src="img/1811008.png" width="100" height="100" alt="Laptop">
+      <img src="img/1811008.png"  alt="Laptop">
       </div>
       <div class="col-md-8">
       <h3 class="textstyle"><b>B.Tech-Project</b></h3>
@@ -333,7 +333,7 @@
     <div class="item">
      <div class="row">
      <div class="col-md-4">
-      <img class=" img-circle center-block" src="img/1087815.png" width="100" height="100" alt="Desktop">
+      <img src="img/1087815.png" alt="Desktop">
       </div>
       <div class="col-md-8">
       <h3 class="textstyle"><b>Samudra - AIT AUV</b></h3>
