--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
     <div class="item">
      <div class="row">
       <div class="col-md-4">
-      <img  src="img/330841.png" alt="Phones">
+      <img src="img/3380841.png" alt="Phones">
       </div>
       <div class="col-md-8">
       <h3 class="textstyle"><b>Internship Project</b></h3>
@@ -319,7 +319,7 @@
     <div class="item">
     <div class="row">
      <div class="col-md-4">
-      <img src="img/1811008.png"  alt="Laptop">
+      <img src="img/1814008.png"  alt="Laptop">
       </div>
       <div class="col-md-8">
       <h3 class="textstyle"><b>B.Tech-Project</b></h3>
