--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
     <div class="item active">
     <div class="row">
       <div class="col-md-4">
-      <img src="img/1934025.png" text-align="center" alt="Tablets">
+      <img src="img/1934025.png" display: "flex"; justify-content: "center"; alt="Tablets">
       </div>
       <div class="col-md-8">
       
